--- a/report.tex
+++ b/report.tex
@@ -24,7 +24,7 @@
 \usepackage{multicol}
 
 \title{\LARGE \bf
-Proposal for Analysis of Security In a Modern Processor
+MidTerm Report: Analysis of Security In a Modern Processor
 }
 
 
